# SFMLChat

./: main.cpp
Sock/: CMakeLists.txt  main.cpp
Sock2/: CMakeLists.txt  main.cpp
SockRefac/: CMakeLists.txt  ClientClass.cpp  ClientClass.h  ClientObject.cpp  ClientObject.h  Cursor.cpp  Cursor.h  MessageObject.cpp  MessageObject.h  MessageWidget.cpp  MessageWidget.h  ServerClass.cpp  ServerClass.h  TextField.cpp  TextField.h  main.cpp
